--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -70,3 +70,13 @@
     background-color: #f5f5f5;
     border-left: 3px solid #496ba6;
 }
+
+.navbar-toolbar .navbar-right .navbar-profile > a .meta .avatar img {
+    width: auto;
+    max-height: 35px;
+}
+
+.sidebar-content img {
+    width: auto;
+    max-height: 50px;
+}
